# PracticeAutomake

./: README.md
bin_shell_variable/: Makefile.am  configure.ac
lib_shell_variable/: Makefile.am  configure.ac  x.c
shell_variable/: x.c
